# adaptyst-analyser

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  REUSE.toml  js_setup.py  js_setup.sh  pyproject.toml
docs/: home.md
src/adaptystanalyser/: __init__.py  app.py  arrangements.py  cli.py  results.py  setup.py
src/adaptystanalyser/static/: loading.svg.license  viewer.css  viewer.js  viewer_common.css  viewer_compact.css  viewer_standard.css
src/adaptystanalyser/static/modules/: linuxperf.css  linuxperf.js
src/adaptystanalyser/static/modules/linuxperf/: backend.css  backend.js
src/adaptystanalyser/templates/: viewer.html
test/: test_identifier.py  test_profiling_results.py
