[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "adaptyst-analyser"
dynamic = ["version"]
authors = [
  { name="Maksymilian Graczyk", email="maksymilian.graczyk@cern.ch" },
]
description = "A tool for analysing performance analysis results returned e.g. by Adaptyst"
requires-python = ">=3.6"
dependencies = [
  "Jinja2",
  "treelib",
  "flask",
  "gunicorn",
  "pytest",
  "pytest-mock"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
adaptyst-analyser = "adaptystanalyser.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
only-include = ["src/adaptystanalyser"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
only-include = ["src/adaptystanalyser"]
sources = ["src"]

[tool.hatch.build.hooks.custom]
path = "js_setup.py"
