# SPDX-FileCopyrightText: 2025 CERN
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "adaptyst-analyser"
dynamic = ["version"]
authors = [
  { name="Maksymilian Graczyk", email="maksymilian.graczyk@cern.ch" },
]
description = "A tool for analysing performance analysis results returned e.g. by Adaptyst"
requires-python = ">=3.8"
dependencies = [
  "Jinja2",
  "treelib",
  "flask",
  "gunicorn",
  "pytest",
  "pytest-mock"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
adaptyst-analyser = "adaptystanalyser.cli:main"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{rev}"
distance-dirty = "{base_version}+{distance}.{rev}.d{build_date:%Y%m%d}"

[tool.hatch.build.targets.wheel]
only-include = ["src/adaptystanalyser"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
only-include = ["src/adaptystanalyser"]
sources = ["src"]

[tool.hatch.build.hooks.custom]
path = "js_setup.py"
